{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 47,
  "lineage": "e68bb5c0-b8fd-d827-7d87-f35f2d67fef9",
  "resources": [
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:security-group/sg-09a543d1539ec5443",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a543d1539ec5443",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3241080d40b8f4a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks_cluster2021082016463272410000000b",
            "name_prefix": "eks_cluster",
            "owner_id": "819917586372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "eks_cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:security-group/sg-0e3241080d40b8f4a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3241080d40b8f4a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a543d1539ec5443"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a543d1539ec5443"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks_cluster2021082016463273530000000c",
            "name_prefix": "eks_cluster",
            "owner_id": "819917586372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster-eks_worker_sg",
              "kubernetes.io/cluster/eks_cluster": "owned"
            },
            "tags_all": {
              "Name": "eks_cluster-eks_worker_sg",
              "kubernetes.io/cluster/eks_cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3948704610",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09a543d1539ec5443",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_k8s.aws_security_group.cluster",
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1372299665",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09a543d1539ec5443",
            "self": false,
            "source_security_group_id": "sg-0e3241080d40b8f4a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_k8s.aws_security_group.cluster",
            "module.prod_k8s.aws_security_group.workers",
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-730826715",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e3241080d40b8f4a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_k8s.aws_security_group.workers",
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4240486027",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3241080d40b8f4a",
            "self": false,
            "source_security_group_id": "sg-09a543d1539ec5443",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_k8s.aws_security_group.cluster",
            "module.prod_k8s.aws_security_group.workers",
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4030241895",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3241080d40b8f4a",
            "self": false,
            "source_security_group_id": "sg-09a543d1539ec5443",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_k8s.aws_security_group.cluster",
            "module.prod_k8s.aws_security_group.workers",
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_k8s",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3517242949",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e3241080d40b8f4a",
            "self": false,
            "source_security_group_id": "sg-0e3241080d40b8f4a",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_k8s.aws_security_group.workers",
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05638cc3873523127",
            "domain": "vpc",
            "id": "eipalloc-0814f5f022b647b30",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ff3cb56a5da44ffd",
            "private_dns": "ip-10-0-0-35.ec2.internal",
            "private_ip": "10.0.0.35",
            "public_dns": "ec2-52-22-30-154.compute-1.amazonaws.com",
            "public_ip": "52.22.30.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ac-xl-terraform-lab",
              "env": "ac-xl-terraform-lab"
            },
            "tags_all": {
              "Name": "ac-xl-terraform-lab",
              "env": "ac-xl-terraform-lab"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:internet-gateway/igw-0df47076205fa2b49",
            "id": "igw-0df47076205fa2b49",
            "owner_id": "819917586372",
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc-ing",
              "env": "ac-xl-terraform-lab"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc-ing",
              "env": "ac-xl-terraform-lab"
            },
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0814f5f022b647b30",
            "connectivity_type": "public",
            "id": "nat-0ae11a472c93a79c8",
            "network_interface_id": "eni-0ff3cb56a5da44ffd",
            "private_ip": "10.0.0.35",
            "public_ip": "52.22.30.154",
            "subnet_id": "subnet-0a3fbf07df0433f9c"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.this",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-r-t-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:route-table/rtb-03055c6045c1046fe",
            "id": "rtb-03055c6045c1046fe",
            "owner_id": "819917586372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae11a472c93a79c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc-r-t-pri",
              "env": "ac-xl-terraform-lab"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc-r-t-pri",
              "env": "ac-xl-terraform-lab"
            },
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_eip.this",
            "module.prod_vpc.aws_nat_gateway.this",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-r-t-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:route-table/rtb-061366a14376994b1",
            "id": "rtb-061366a14376994b1",
            "owner_id": "819917586372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df47076205fa2b49",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc-r-t-pub",
              "env": "ac-xl-terraform-lab"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc-r-t-pub",
              "env": "ac-xl-terraform-lab"
            },
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.this",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this-as-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33b7b1806da8744",
            "route_table_id": "rtb-03055c6045c1046fe",
            "subnet_id": "subnet-083e0bc35158cf272"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.this",
            "module.prod_vpc.aws_nat_gateway.this",
            "module.prod_vpc.aws_route_table.this-r-t-pri",
            "module.prod_vpc.aws_subnet.this_sub_pri",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this-as-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094f95b9687ee5db2",
            "route_table_id": "rtb-061366a14376994b1",
            "subnet_id": "subnet-0a3fbf07df0433f9c"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.this",
            "module.prod_vpc.aws_route_table.this-r-t-pub",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086ad6b465a9f4668",
            "route_table_id": "rtb-061366a14376994b1",
            "subnet_id": "subnet-038b94a6d040aeece"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.this",
            "module.prod_vpc.aws_route_table.this-r-t-pub",
            "module.prod_vpc.aws_subnet.this_sub_pub",
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_sub_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:subnet/subnet-083e0bc35158cf272",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-083e0bc35158cf272",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819917586372",
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc-private_subnet",
              "env": "ac-xl-terraform-lab"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc-private_subnet",
              "env": "ac-xl-terraform-lab"
            },
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_sub_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:subnet/subnet-0a3fbf07df0433f9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0a3fbf07df0433f9c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819917586372",
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc-public_subnet_1",
              "env": "ac-xl-terraform-lab",
              "kubernetes.io/cluster/eks_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc-public_subnet_1",
              "env": "ac-xl-terraform-lab",
              "kubernetes.io/cluster/eks_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:subnet/subnet-038b94a6d040aeece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-038b94a6d040aeece",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819917586372",
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc-public_subnet_2",
              "env": "ac-xl-terraform-lab",
              "kubernetes.io/cluster/eks_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc-public_subnet_2",
              "env": "ac-xl-terraform-lab",
              "kubernetes.io/cluster/eks_cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09d92d9f1fdeb6901"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819917586372:vpc/vpc-09d92d9f1fdeb6901",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a701ac35e8ba6488",
            "default_route_table_id": "rtb-0a6591d307ea9c996",
            "default_security_group_id": "sg-0eab5dd727c080a77",
            "dhcp_options_id": "dopt-009c3f3ef9ee78307",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d92d9f1fdeb6901",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a6591d307ea9c996",
            "owner_id": "819917586372",
            "tags": {
              "Name": "ac-xl-joseher-prod-vpc",
              "env": "ac-xl-terraform-lab"
            },
            "tags_all": {
              "Name": "ac-xl-joseher-prod-vpc",
              "env": "ac-xl-terraform-lab"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}